--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    repositories {
+        google()
+        jcenter()
+        maven { url "https://maven.google.com" }
+        mavenCentral()
+    }
     dependencies {
         classpath "gradle.plugin.com.betomorrow.gradle:appcenter-plugin:2.0.4"
         classpath 'com.android.tools.build:gradle:4.1.2'
+    }
+}
+allprojects {
+    repositories {
+        google()
+        jcenter()
+        maven { url "https://maven.google.com" }
+        mavenCentral()
     }
 }
 
