--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,13 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.1.2'
     }
 }
+plugins {
+    id 'com.android.application' version '8.1.2' apply false
+    id 'com.android.library' version '8.1.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
+    id 'u' version '1.9.0-1.0.12' apply false
+}
+
 allprojects {
     repositories {
         google()
@@ -19,11 +26,3 @@ allprojects {
         mavenCentral()
     }
 }
-
-plugins {
-    id 'com.android.application' version '8.1.2' apply false
-    id 'com.android.library' version '8.1.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
-    id 'com.google.devtools.ksp' version '1.9.0-1.0.12' apply false
-}
-
