--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     dependencies {
         classpath "gradle.plugin.com.betomorrow.gradle:appcenter-plugin:2.0.4"
         classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath 'com.android.tools.build:gradle:8.1.2'
     }
 }
 plugins {
