--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
     dependencies {
         classpath "gradle.plugin.com.betomorrow.gradle:appcenter-plugin:2.0.4"
-        
+        classpath "com.google.gms:google-services:4.3.15"
     }
 }
 plugins {
